k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iris-api
  labels:
    name: iris-api
